test/typeConstBlockCapture.slq

def main(){
	x:=(0,0):ð”¹[];
	for i in 0..2{ x[i]:=H(x[i]); } // TODO
	k:=(0,0) coerce ð”¹^x.length;
	f:=()=>x; // error
	x:=0:int[2]; // error
	forget(k);
	return (f,x); // TODO
}
